openshift/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azubi-demo
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"azubi-demo:latest"},
      "fieldPath":"spec.template.spec.containers[?(@.name==\"web\")].image"}]
spec:
  replicas: 1

  selector:
    matchLabels:
      app: azubi-demo

  template:
    metadata:
      labels:
        app: azubi-demo

    spec:
      containers:
        - name: web
          image: azubi-demo:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: azubi-demo
spec:
  selector:
    app: azubi-demo

  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: azubi-demo
spec:
  to:
    kind: Service
    name: azubi-demo

  port:
    targetPort: http
